--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.4.0",
     "@types/node": "20.3.1",
@@ -16,7 +17,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint-config-next": "^12.0.4",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -25,7 +26,8 @@
     "stripe": "^12.10.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "supabase": "^1.74.2"
